# client-core-singleton

./: .gitignore  CMakeLists.txt  README.md
include/servercore/: client.h
src/: client.cpp  connection.cpp  connection.h  macros.h  pch.h
